# check-python-version

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  check-python-version.py  main.py  pyproject.toml
.github/workflows/: ci.yml
