[project]
name = "check-python-version"
version = "5.0"
description = "Check the release tag matches the library version before deploy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["packaging>=25.0"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }
mccabe = { max-complexity = 18 }

[tool.ruff.format]
# don't format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"
